# bounce

./: Cargo.toml  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
.cargo/: config.toml
apps/bounce/: jest.config.js  project.json  webpack.config.js
apps/bounce-e2e/: cypress.json  project.json
apps/bounce-e2e/src/integration/: app.spec.ts
apps/bounce/src/: index.html  styles.css
apps/bounce/src/app/: app.css  app.element.spec.ts  app.element.ts  app.ts  canvas2d.ts
libs/physics/: Cargo.toml  project.json
libs/physics/src/: jsvec.rs  lib.rs  of32.rs
libs/physics/src/old/: lib.rs  object.rs
libs/physics/src/old/properties/: collision.rs  motion.rs  physics.rs  position.rs
