[package]
name = "physics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.20.2"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'CanvasRenderingContext2d'
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--detect-features"]
